--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,28 +9,74 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="3"
         android:background="#000"
-        android:orientation="horizontal" >
+        android:orientation="vertical" >
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:background="#000"
+            android:orientation="horizontal" >
+            <TextView
+                android:id="@+id/currencyText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="right"
+                android:text="$"
+                android:textColor="#FFF"
+                android:textSize="50sp"/>
         <TextView
             android:id="@+id/editText"
-            android:layout_width="0dp"
-            android:text="0"
-            android:textSize="70sp"
-            android:gravity="right"
-            android:layout_gravity="center"
-            android:textColor="#FFF"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="3" />
+            android:layout_gravity="center"
+            android:layout_weight="3"
+            android:gravity="right"
+            android:text="0"
+            android:textColor="#FFF"
+            android:textSize="50sp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:background="#000"
+            android:orientation="horizontal" >
+            <TextView
+                android:id="@+id/currencyTextAnswer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="right"
+                android:text="₦"
+                android:textColor="#FFF"
+                android:textSize="50sp"/>
+
+            <TextView
+                android:id="@+id/editText2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="3"
+                android:gravity="right"
+                android:text="1"
+                android:textColor="#FFF"
+                android:textSize="50sp" />
+
+            </LinearLayout>
+
+
     </LinearLayout>
 
     <LinearLayout
-        android:gravity="center"
         android:layout_width="match_parent"
-        android:orientation="vertical"
         android:layout_height="0dp"
-        android:layout_weight="4">
+        android:layout_weight="4"
+        android:gravity="center"
+        android:orientation="vertical">
 
 
         <LinearLayout
@@ -40,24 +86,39 @@
             android:orientation="horizontal">
             <Button
                 android:id="@+id/currency_converting_From"
+                style="?android:attr/spinnerStyle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:gravity="center"
                 android:text="$" />
             <Button
                 android:id="@+id/currency_switch"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="⇌" />
-            <Button
+            <!-- <Button
                 android:id="@+id/currency_converting_to"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="₦" />
+                -->
+            <!--<Spinner
+                android:id="@+id/planets_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+                -->
             <Button
                 android:id="@+id/buttonCancel"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="C" />
+            <Button
+                android:id="@+id/button"
+                style="?android:attr/spinnerStyle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="₦" />
 
         </LinearLayout>
         <LinearLayout
@@ -159,20 +220,20 @@
             <Button
                 android:id="@+id/buttonDot"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:text="." />
             <Button
                 android:id="@+id/buttonAdd"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:text="+" />
             <Button
                 android:id="@+id/buttonEquals"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:text="=" />
 
         </LinearLayout>
