--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             android:background="#000"
             android:orientation="horizontal" >
             <TextView
-                android:id="@+id/currencyText"
+                android:id="@+id/currencyTextInput"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -29,7 +29,7 @@
                 android:textColor="#FFF"
                 android:textSize="50sp"/>
         <TextView
-            android:id="@+id/editText"
+            android:id="@+id/inputTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -56,13 +56,13 @@
                 android:textSize="50sp"/>
 
             <TextView
-                android:id="@+id/editText2"
+                android:id="@+id/outputText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="3"
                 android:gravity="right"
-                android:text="1"
+                android:text="0"
                 android:textColor="#FFF"
                 android:textSize="50sp" />
 
@@ -90,7 +90,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="$" />
+                android:onClick="currencyFrom"
+                android:text="NGN" />
+            <Spinner
+                android:id="@+id/spinner_from"
+                android:layout_width="0dp"
+                android:layout_height="0dp" />
             <Button
                 android:id="@+id/currency_switch"
                 android:layout_width="match_parent"
@@ -113,12 +118,17 @@
                 android:layout_height="match_parent"
                 android:text="C" />
             <Button
-                android:id="@+id/button"
+                android:id="@+id/currency_converting_To"
                 style="?android:attr/spinnerStyle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="₦" />
+                android:onClick="currencyTo"
+                android:text="NGN" />
+            <Spinner
+                android:id="@+id/spinner_To"
+                android:layout_width="0dp"
+                android:layout_height="0dp" />
 
         </LinearLayout>
         <LinearLayout
@@ -130,21 +140,28 @@
                 android:id="@+id/button7"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:onClick="keyPressed"
+                android:tag="7"
                 android:text="7" />
             <Button
                 android:id="@+id/button8"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:onClick="keyPressed"
+                android:tag="8"
                 android:text="8" />
             <Button
                 android:id="@+id/button9"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:onClick="keyPressed"
+                android:tag="9"
                 android:text="9" />
             <Button
                 android:id="@+id/buttonDivide"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:onClick="functionKeyPressed"
                 android:text="/" />
 
         </LinearLayout>
@@ -158,21 +175,28 @@
                 android:id="@+id/button4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:onClick="keyPressed"
+                android:tag="4"
                 android:text="4" />
             <Button
                 android:id="@+id/button5"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:onClick="keyPressed"
+                android:tag="5"
                 android:text="5" />
             <Button
                 android:id="@+id/button6"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:onClick="keyPressed"
+                android:tag="6"
                 android:text="6"/>
             <Button
                 android:id="@+id/buttonMultiply"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:onClick="functionKeyPressed"
                 android:text="X" />
 
         </LinearLayout>
@@ -187,21 +211,29 @@
                 android:id="@+id/button1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:onClick="keyPressed"
+                android:tag="1"
                 android:text="1" />
             <Button
                 android:id="@+id/button2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:onClick="keyPressed"
+                android:tag="2"
                 android:text="2" />
             <Button
                 android:id="@+id/button3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:onClick="keyPressed"
+                android:tag="3"
                 android:text="3" />
             <Button
                 android:id="@+id/buttonSubtract"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:onClick="functionKeyPressed"
+                android:tag="-"
                 android:text="-" />
 
         </LinearLayout>
@@ -216,23 +248,28 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
+                android:onClick="keyPressed"
+                android:tag="0"
                 android:text="0" />
             <Button
                 android:id="@+id/buttonDot"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="dotKeyPressed"
                 android:text="." />
             <Button
                 android:id="@+id/buttonAdd"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:onClick="functionKeyPressed"
                 android:text="+" />
             <Button
                 android:id="@+id/buttonEquals"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:onClick="answerKeyPressed"
                 android:layout_weight="1"
                 android:text="=" />
 
