--- a/app/src/main/res/layout/spinner_layout.xml
+++ b/app/src/main/res/layout/spinner_layout.xml
@@ -13,11 +13,22 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="My name is NGN"
+        android:text="NGN"
         android:id="@+id/spinnerCodeView"
         android:layout_toRightOf="@id/spinnerImageView"
         android:layout_alignBottom="@id/spinnerImageView"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nigeria"
+        android:id="@+id/spinnerCountryView"
+        android:layout_toRightOf="@id/spinnerImageView"
+        android:layout_above="@id/spinnerCodeView"
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="4dp"/>
 
 </RelativeLayout>
