--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,26 @@
     android:screenOrientation="portrait"
     tools:context="com.andela.currencycalculator.MainActivity">
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
         android:background="#000"
         android:orientation="vertical" >
+
+        <HorizontalScrollView android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+            <TextView
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/historyTextView"
+            android:text=""
+            android:textColor="#FFF"
+            android:textSize="25sp"/>
+
+        </HorizontalScrollView>
 
         <LinearLayout
             android:layout_width="match_parent"
